syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "Messages/HouseholdExpenses.proto";
import "Messages/HouseholdData.proto";

message Household {
    int32 HouseholdId = 1;
    
    int32 SalesArrangementId = 2;

    int64 CaseId = 3;
    
    int32 HouseholdTypeId = 4;
    
    google.protobuf.Int32Value CustomerOnSAId1 = 5;
    
    google.protobuf.Int32Value CustomerOnSAId2 = 6;
        
    DomainServices.HouseholdService.HouseholdData Data = 7;
    
    DomainServices.HouseholdService.Expenses Expenses = 8;
}