syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message ValidateSalesArrangementIdRequest {
	int32 SalesArrangementId = 1;
	bool ThrowExceptionIfNotFound = 2;
}

message ValidateSalesArrangementIdResponse {
    bool Exists = 1;
	google.protobuf.Int64Value CaseId = 2;
	// Stav SA
	google.protobuf.Int32Value State = 3;
	// Typ SA
	google.protobuf.Int32Value SalesArrangementTypeId = 4;
}
